data/derived/comb/progs/unify/prog6752.ml.out
Characters 40-47:
  let rec clone x n = sepConcat ";" (clone(x n-1));;
                                          ^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a -> int
